--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,5 @@ spring:
       enabled: true
 logging:
   level:
-    org:
-      springframework:
-        web:
-          client:
-            RestTemplate: DEBUG
+    org.springframework.web.client.RestTemplate: DEBUG
+    si.mazi.rescu: DEBUG
